fix text alignment with icons

--- a/app/assets/stylesheets/welcome/home.scss
+++ b/app/assets/stylesheets/welcome/home.scss
@@ -67,3 +67,6 @@ img {
 .filmtheme .back .film a:hover {
   color: cyan;
 }
+.fa-big {
+  font-size: 30px;
+}
